Fixed z-indexes

--- a/app/assets/less/flip.less
+++ b/app/assets/less/flip.less
@@ -26,10 +26,11 @@
         }
         .front {
             position: absolute;
-            z-index: 1;
+            z-index: 3;
         }
         .back {
             -webkit-transform: rotatey(-180deg);
+            z-index: 2;
         }
 
         &.flipped {
