--- a/public/css/style.css
+++ b/public/css/style.css
@@ -185,10 +185,11 @@
 }
 .flip .card .front {
   position: absolute;
-  z-index: 1;
+  z-index: 3;
 }
 .flip .card .back {
   -webkit-transform: rotatey(-180deg);
+  z-index: 2;
 }
 .flip .card.flipped {
   -webkit-transform: rotatey(-180deg);
